crates/bitnet-server/tests/snapshots/snapshot_wave10__monitoring_config_default_debug.snap
---
source: crates/bitnet-server/tests/snapshot_wave10.rs
expression: cfg
---
MonitoringConfig {
    prometheus_enabled: true,
    prometheus_path: "/metrics",
    opentelemetry_enabled: false,
    opentelemetry_endpoint: None,
    otlp_endpoint: None,
    health_path: "/health",
    metrics_interval: 10,
    structured_logging: true,
    log_level: "info",
    log_format: "json",
}
