crates/bitnet-server/tests/snapshots/snapshot_wave10__performance_indicators_default_json.snap
---
source: crates/bitnet-server/tests/snapshot_wave10.rs
expression: indicators
---
{
  "avg_response_time_ms": 0.0,
  "requests_per_second": 0.0,
  "error_rate": 0.0,
  "sla_compliance": 0.0
}
