crates/bitnet-server/tests/snapshots/snapshot_wave10__readiness_response_not_ready_json.snap
---
source: crates/bitnet-server/tests/snapshot_wave10.rs
expression: resp
---
{
  "status": "not_ready",
  "timestamp": "2024-01-15T12:00:00Z",
  "checks": {
    "model_loaded": false,
    "inference_engine_ready": false,
    "device_available": true,
    "resources_available": true
  }
}
