crates/bitnet-server/tests/snapshots/snapshot_wave10__request_priority_variants_debug.snap
---
source: crates/bitnet-server/tests/snapshot_wave10.rs
expression: priorities
---
[
    "Low",
    "Normal",
    "High",
    "Critical",
]
