crates/bitnet-server/tests/snapshots/snapshot_wave10__security_config_default_json.snap
---
source: crates/bitnet-server/tests/snapshot_wave10.rs
expression: cfg
---
{
  "jwt_secret": null,
  "require_authentication": false,
  "max_prompt_length": 8192,
  "max_tokens_per_request": 2048,
  "allowed_origins": [
    "*"
  ],
  "allowed_model_directories": [],
  "blocked_ips": [],
  "rate_limit_by_ip": true,
  "input_sanitization": true,
  "content_filtering": true,
  "trust_forwarded_headers": false
}
