crates/bitnet-server/tests/snapshots/snapshot_wave10__system_metrics_default_json.snap
---
source: crates/bitnet-server/tests/snapshot_wave10.rs
expression: metrics
---
{
  "cpu_utilization": 0.0,
  "gpu_utilization": 0.0,
  "memory_usage_bytes": 0,
  "active_requests": 0,
  "queue_depth": 0
}
